igt@core_hotunplug@hotrebind - abort - kobject_add_internal failed for tile0 with -EEXIST, don't try to register things with the same name in the same directory
<4> [58.270173] ? syscall_exit_to_user_mode+0xe7/0x260
<4> [58.270179] ? do_syscall_64+0x9c/0x140
<4> [58.270182] ? syscall_exit_to_user_mode+0xe7/0x260
<4> [58.270187] ? do_syscall_64+0x9c/0x140
<4> [58.270189] ? do_syscall_64+0x9c/0x140
<4> [58.270191] ? do_syscall_64+0x9c/0x140
<4> [58.270195] entry_SYSCALL_64_after_hwframe+0x71/0x79
<4> [58.270198] RIP: 0033:0x7f2c10e012f7
<4> [58.270202] Code: 75 05 48 83 c4 58 c3 e8 f7 33 ff ff 0f 1f 80 00 00 00 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 b8 01 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 51 c3 48 83 ec 28 48 89 54 24 18 48 89 74 24
<4> [58.270204] RSP: 002b:00007ffe95795f68 EFLAGS: 00000246 ORIG_RAX: 0000000000000001
<4> [58.270208] RAX: ffffffffffffffda RBX: 000000000000000c RCX: 00007f2c10e012f7
<4> [58.270209] RDX: 000000000000000c RSI: 000055b2575193fc RDI: 0000000000000009
<4> [58.270211] RBP: 000055b2575193fc R08: 0000000000000000 R09: 0000000000000000
<4> [58.270212] R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000009
<4> [58.270213] R13: 0000000000000000 R14: 0000000000000000 R15: 0000000000000000
<4> [58.270221] </TASK>
<3> [58.270234] kobject: kobject_add_internal failed for tile0 with -EEXIST, don't try to register things with the same name in the same directory.
<4> [58.270291] xe 0000:00:02.0: [drm] failed to register TILE sysfs directory, err: -17
<7> [58.270509] xe 0000:00:02.0: [drm:xe_ttm_stolen_mgr_init [xe]] Initialized stolen memory support with 58720256 bytes
<7> [58.270636] xe 0000:00:02.0: [drm:skl_wm_init [xe]] SAGV supported: yes, original SAGV block time: 12 us
<7> [58.270762] xe 0000:00:02.0: [drm:intel_print_wm_latency [xe]] Gen9 Plane WM0 latency 7 (7.0 usec)
<7> [58.270806] xe 0000:00:02.0: [drm:intel_print_wm_latency [xe]] Gen9 Plane WM1 latency 79 (79.0 usec)
<7> [58.270847] xe 0000:00:02.0: [drm:intel_print_wm_latency [xe]] Gen9 Plane WM2 latency 79 (79.0 usec)
<7> [58.270885] xe 0000:00:02.0: [drm:intel_print_wm_latency [xe]] Gen9 Plane WM3 latency 79 (79.0 usec)
<7> [58.270921] xe 0000:00:02.0: [drm:intel_print_wm_latency [xe]] Gen9 Plane WM4 latency 72 (72.0 usec)
<7> [58.270957] xe 0000:00:02.0: [drm:intel_print_wm_latency [xe]] Gen9 Plane WM5 latency 92 (92.0 usec)
<6> [58.280861] xe 0000:00:02.0: [drm] Finished loading DMC firmware i915/xe2lpd_dmc.bin (v2.18)
<7> [58.291795] xe 0000:00:02.0: [drm:intel_display_driver_probe_nogem [xe]] 3 display pipes available.
<7> [58.294426] xe 0000:00:02.0: [drm:intel_cdclk_dump_config [xe]] Current CDCLK 153600 kHz, VCO 614400 kHz, ref 38400 kHz, bypass 19200 kHz, voltage level 0
<7> [58.294502] xe 0000:00:02.0: [drm:intel_update_max_cdclk [xe]] Max CD clock rate: 652800 kHz
<7> [58.294563] xe 0000:00:02.0: [drm:intel_update_max_cdclk [xe]] Max dotclock rate: 1305600 kHz
<7> [58.294648] xe 0000:00:02.0: [drm:intel_dp_aux_ch [xe]] [ENCODER:184:DDI A/PHY A] Using AUX CH A (VBT)
<7> [58.294727] xe 0000:00:02.0: [drm:intel_dp_init_connector [xe]] Adding eDP connector on [ENCODER:184:DDI A/PHY A]
<7> [58.294807] xe 0000:00:02.0: [drm:intel_bios_init_panel [xe]] Panel type (VBT): 2
<7> [58.294874] xe 0000:00:02.0: [drm:intel_bios_init_panel [xe]] Selected panel type (VBT): 2